Rectify views issues.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -32,7 +32,10 @@
         Production
     </a>
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="/prodverse/items-to-count?recordType=warehouse">Select Warehouse Count List</a></li>
+        <li><a class="dropdown-item" href="/prodverse/items-to-count?recordType=warehouse">Create Warehouse Count List</a></li>
+    </ul>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="/core/count-records/?recordType=warehouse">View Warehouse Count Records</a></li>
     </ul>
 </li>
 <li class="nav-item dropdown">
