--- a/app/core/templates/core/inventorycounts/countcollectionlinks.html
+++ b/app/core/templates/core/inventorycounts/countcollectionlinks.html
@@ -12,7 +12,7 @@
                 <tr>
                     {% if user.is_staff %}<th scope="col"></th>{% endif %}
                     <th scope="col">Collection ID</th>
-                    <th scope="col">Description</th>
+                    <th scope="col">Link</th>
                 </tr>
             </thead>
     {% for link in count_collection_links %}
