--- a/app/templates/navbars/office-navbar-items.html
+++ b/app/templates/navbars/office-navbar-items.html
@@ -1,4 +1,4 @@
-<li class="nav-item dropdown" id="blendAuditingDropdown">
+<li class="nav-item dropdown" id="blendingDropdown">
     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Blending
     </a>
@@ -8,12 +8,35 @@
         <li><a class="dropdown-item" href="/core/lot-num-records">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
-        <li><a class="dropdown-item" href="/core/count-records?recordType=blend">View All Blend Counts</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/display-all-chemical-locations">View Chemical Locations</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
+    </ul>
+</li>
+<li class="nav-item dropdown" id="inventoryDropdown">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Inventory
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="/prodverse/items-to-count?recordType=warehouse">Create Warehouse Count List</a></li>
+    </ul>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="/core/upcoming-blend-counts?recordType=blend">Create A Blend Count List</a></li>
+    </ul>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="/core/upcoming-component-counts?recordType=blendcomponent">Create Blend Component Count List</a></li>
+    </ul>
+    <li><hr class="dropdown-divider"></li>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="/core/count-records/?recordType=warehouse">View All Warehouse Count Records</a></li>
+    </ul>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="/core/count-records?recordType=blend">View All Blend Counts</a></li>
+    </ul>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="/core/count-records?recordType=blendcomponent">View All Blend Component Counts</a></li>
     </ul>
 </li>
 <li class="nav-item">
