Further revise navbar.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -36,6 +36,7 @@
         <li><a class="dropdown-item" href="/core/count-records/?recordType=warehouse">View All Warehouse Count Records</a></li>
         <li><a class="dropdown-item" href="/core/count-records?recordType=blend">View All Blend Counts</a></li>
         <li><a class="dropdown-item" href="/core/count-records?recordType=blendcomponent">View All Blend Component Counts</a></li>
+        <li><a class="dropdown-item" href="/core/display-count-collection-links">Count Links</a></li>
     </ul>
 </li>
 <li class="nav-item dropdown">
