--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -23,3 +23,6 @@
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
     </ul>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/core/display-count-collection-links">Count Links</a>
+</li>
