--- a/app/core/templates/core/inventorycounts/countcollectionlinks.html
+++ b/app/core/templates/core/inventorycounts/countcollectionlinks.html
@@ -10,18 +10,26 @@
         <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark">
                 <tr>
-                    {% if user.is_staff %}<th scope="col"></th>{% endif %}
+                    {% comment %} {% if user.is_staff %}<th scope="col"></th>{% endif %} {% endcomment %}
                     <th scope="col">Collection ID</th>
                     <th scope="col">Link</th>
+                    {% if user.is_staff %}<th scope="col"></th>{% endif %}
                 </tr>
             </thead>
     {% for item in count_collection_links %}
         <tr>
-            {% if user.is_staff %}<td class='text-center'>
-                <input type="checkbox" name={{ item.id }} class="reportCheckBox checkbox"></input>
-            </td>{% endif %}
+            {% comment %} {% if user.is_staff %}<td class='text-center'>
+                <input type="checkbox" name={{ item.id }} class="checkbox"></input>
+            </td>{% endif %} {% endcomment %}
             <td>{{ item.collection_id }}</td>
             <td><a href="{{ item.collection_link }}">Enter Counts >></a></td>
+            {% if user.is_staff %}
+            <td class="text-center">
+                <a href="/core/delete-count-collection-links?list=[{{ item.id }}]" type="button" class="btn btn-outline-danger deleteBtn">
+                    <i class="fa fa-trash" disabled="disabled"></i>
+                </a>
+            </td>
+            {% endif %}
         </tr>
     {% endfor %}
 
