--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -23,7 +23,7 @@
             <thead class="thead-dark">
                 <tr>
                     {% if user.is_staff %}<th scope="col"></th>{% endif %}
-                    <th scope="col">Blend</th>
+                    <th scope="col">Item Code</th>
                     <th scope="col">Description</th>
                     <th scope="col">Exp. Qty</th>
                     <th scope="col">Count Qty</th>
