--- a/app/core/templates/core/inventorycounts/countcollectionlinks.html
+++ b/app/core/templates/core/inventorycounts/countcollectionlinks.html
@@ -31,7 +31,7 @@
                         <i class="fa fa-trash" disabled="disabled"></i>
                     </a>
                 </td>
-                
+                {% endif %}
             </tr>
         {% endfor %}
     {% else %}
