--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -15,7 +15,7 @@
         <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/tank-levels">Tank Levels</a></li>
         <li><a class="dropdown-item" href="/core/lot-num-records">Lot Numbers</a></li>
-        <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
+        <li><a class="dropdown-item" href="/core/blend-shortages?recordType=blend">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/display-all-chemical-locations">View Chemical Locations</a></li>
