--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -7,15 +7,17 @@
     <div class='text-center'>
         <h1>Full Count History</h1>
         <br><br>
-        <button id="recountsButton" class="btn btn-outline-secondary">Check All Recounts</button>
-        <br><br>
-        <button id="createReportButton" class="btn btn-secondary" style="display:none;">Count Report</button>
-        <button id="batchEditButton" class="btn btn-primary" style="display:none;" data-bs-toggle="modal" data-bs-target="#editCountRecordsModal">
-            Edit Counts
-        </button>
-        <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#deleteCountRecordsModal">
-            Delete Counts
-        </button>
+        {% if user.is_staff %}
+            <button id="recountsButton" class="btn btn-outline-secondary">Check All Recounts</button>
+            <br><br>
+            <button id="createReportButton" class="btn btn-secondary" style="display:none;">Count Report</button>
+            <button id="batchEditButton" class="btn btn-primary" style="display:none;" data-bs-toggle="modal" data-bs-target="#editCountRecordsModal">
+                Edit Counts
+            </button>
+            <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#deleteCountRecordsModal">
+                Delete Counts
+            </button>
+        {% endif %}
         <br><br>
     </div>
     <div class="table-responsive-sm">
@@ -33,6 +35,7 @@
                     <th scope="col">Count Type</th>
                     <th scope="col">CID</th>
                     <th scope="col"></th>
+                    {% if user.is_staff %}<th scope="col"></th>{% endif %}
                 </tr>
             </thead>
             
@@ -50,14 +53,16 @@
                     <td>{{ item.variance|floatformat:0 }}</td>
                     <td>{{ item.count_type }}</td>
                     <td>{{ item.collection_id }}</td>
-                    <td class="text-center">
-                        <button dataItemID="{{ item.id }}" type="button" class="btn btn-secondary editBtn" data-bs-toggle="modal" data-bs-target="#editCountRecordsModal">
-                            Edit
-                        </button>
-                        <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#deleteCountRecordsModal">
-                            Delete
-                        </button>
-                    </td>
+                    {% if user.is_staff %}
+                        <td class="text-center">
+                            <button dataItemID="{{ item.id }}" type="button" class="btn btn-secondary editBtn" data-bs-toggle="modal" data-bs-target="#editCountRecordsModal">
+                                Edit
+                            </button>
+                            <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#deleteCountRecordsModal">
+                                Delete
+                            </button>
+                        </td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </table>
