--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -7,6 +7,7 @@
     <div class='text-center'>
         <h1>Full Count History</h1>
         <br><br>
+        <a href="/core/display-count-collection-links/">Return to Count Links</a>
         {% if user.is_staff %}
             <button id="recountsButton" class="btn btn-outline-secondary">Check All Recounts</button>
             <br><br>
