Add a connection status check.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,6 +62,9 @@
                         </div>
                 </div>
             </nav>
+            <div id="networkStatusBar" style="display: block;">
+                <p style="background-color: orangered; color: white; text-align: center;">No Internet Connection</p>
+             </div>
         </header>
         <!---->
         <main role="main" class="container">
