--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -29,7 +29,7 @@
                         <div id="primaryFormula" class="text-center">
                             <h1>Starbrite Primary Formula</h1>
                             <div id="itemIdentityContainer" class="headerCell">
-                                <h3 id="itemCode" class="blendSheetField readonly"></h3>
+                                <h3 id="itemInfo" class="blendSheetField readonly"></h3>
                                 <h3 id="itemDescription" class="blendSheetField readonly"></h3>
                             </div>
                         </div>
