Rectify issue with offline status bar.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,7 +62,7 @@
                         </div>
                 </div>
             </nav>
-            <div id="networkStatusBar" style="display: block;">
+            <div id="networkStatusBar" style="display: none;">
                 <p style="background-color: orangered; color: white; text-align: center;">No Internet Connection</p>
              </div>
         </header>
