--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -4,7 +4,7 @@
 {% block title %}<title>Blend Sheet</title>{% endblock %}
 
 {% block scripts%}
-    <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendsheet.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendSheet.css' %}">
     <script type="module" src="{% static 'core/js/pageModules/blendSheet.js' %}"></script>
 {% endblock%}
 
@@ -72,9 +72,9 @@
             <table id="blendSheetIngredientsTable" class="table text-left table-bordered table-hover">
                 <thead>
                     <th>Item Code</th>
-                    <th>%</th>
+                    <th>Ratio</th>
                     <th>Chemical Description</th>
-                    <th>Qty Needed</th>
+                    <th>Qty</th>
                     <th>Unit</th>
                     <th>Qty Added</th>
                     <th>Chem. Lot Number</th>
