Add weight per gallon to the blendsheettemplate editor.

--- a/app/core/templates/core/blendsheettemplate.html
+++ b/app/core/templates/core/blendsheettemplate.html
@@ -77,6 +77,7 @@
                     <th>Qty</th>
                     <th>Unit</th>
                     <th class="text-center">Calculation Method</th>
+                    <th>Weight Per Gal</th>
                 </thead>
                 <tbody id="blendSheetIngredientsTbody">
                 </tbody>
