Handle weight/volume switches and styling.

--- a/app/core/templates/core/blendsheettemplate.html
+++ b/app/core/templates/core/blendsheettemplate.html
@@ -55,13 +55,13 @@
                     <td>
                         <div id="batchQuantityContainer" class="headerCell">
                             <h4 class="fieldLabel">Theory Gallons:&nbsp;</h4>
-                            <input id="batchQuantity" class="blendSheetField readonly"></input>
+                            <input id="batchQuantity" class="blendSheetField"></input>
                         </div>
                     </td>
                     <td>
                         <div id="lotNumberContainer" class="headerCell">
                             <h4 class="fieldLabel">Lot Number:&nbsp;</h4>
-                            <h4 id="lotNumber" class="blendSheetField readonly">N/A</h4>
+                            <h4 id="lotNumber" class="blendSheetField">N/A</h4>
                         </div>
                     </td>
                 </tr>
@@ -95,7 +95,8 @@
         <div class="blendSheetDivider"></div>
         <div id="processPreparationContainer">
             <h3>Process Preparation</h3>
-            <input id="processPreparation" class="blendSheetField readonly"></input>
+            <input id="processPreparation" class="blendSheetField"></input>
+            <br>
         </div>
         <div id="blendSheetStepsContainer" class="table-responsive-sm">
             <table id="blendSheetStepsTable" class="table text-left table-bordered table-hover">
