--- a/app/core/static/core/css/blendSheetTemplate.css
+++ b/app/core/static/core/css/blendSheetTemplate.css
@@ -55,3 +55,9 @@ input {
     display: flex;
     justify-content: space-between;
 }
+
+.form-check-input:checked[type=checkbox] {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.25);
+  }
